# static-program-analyzer

./: .gitignore  README.md
Team17/Code17/src/integration_testing/: CMakeLists.txt
Team17/Code17/src/integration_testing/src/: QPS-PKB-test-m1.cpp  QPS-PKB-test-m2-m3.cpp  QPS-PKB-test-m2.cpp  QPS-PKB-test-m3.cpp  QPS-PKB-test.cpp  QPS-Tokenizer-Parser-Test.cpp  SP-PKB-test-m1.cpp  SP-PKB-test-m2.cpp  SP-PKB-test.cpp
Team17/Code17/src/integration_testing/src/sample_source/: source_code.cpp  source_code_m1.cpp  source_code_m2.cpp
Team17/Code17/src/spa/: CMakeLists.txt
Team17/Code17/src/spa/src/components/pkb/: EntityManager.cpp  EntityManager.h  pkb.cpp  pkb.h
Team17/Code17/src/spa/src/components/pkb/clients/: QPSClient.cpp  QPSClient.h  SPClient.cpp  SPClient.h
Team17/Code17/src/spa/src/components/pkb/manager/: EntityManager.cpp  EntityManager.h  PatternManager.cpp  PatternManager.h  RelationshipManager.cpp  RelationshipManager.h
Team17/Code17/src/spa/src/components/pkb/runtimeEvaluator/: AffectsRelationshipEvaluator.cpp  utils.h  (+9 more)
Team17/Code17/src/spa/src/components/qps/: QPS.cpp  QPS.h
Team17/Code17/src/spa/src/components/sp/: Extractor.cpp  Extractor.h  SimpleToken.cpp  SimpleToken.h
Team17/Code17/src/spa/src/models/: AssignEntity.h  CallEntity.h  ConstantEntity.h  Entity.cpp  Entity.h  IfEntity.cpp  IfEntity.h  ModifyRelationship.cpp  ModifyRelationship.h  PrintEntity.h  ProcedureEntity.h  ReadEntity.cpp  ReadEntity.h  Relationship.cpp  Relationship.h  StatementEntity.cpp  StatementEntity.h  StatementListEntity.h  UsesRelationship.cpp  UsesRelationship.h  VariableEntity.h  WhileEntity.cpp  WhileEntity.h
Team17/Code17/src/spa/src/models/Entity/: AssignEntity.cpp  AssignEntity.h  CallEntity.cpp  CallEntity.h  ConstantEntity.cpp  ConstantEntity.h  DesignEntity.h  Entity.cpp  Entity.h  EntityTest.cpp  IfEntity.cpp  IfEntity.h  PrintEntity.cpp  PrintEntity.h  ProcedureEntity.cpp  ProcedureEntity.h  ReadEntity.cpp  ReadEntity.h  StatementEntity.cpp  StatementEntity.h  StatementListEntity.cpp  StatementListEntity.h  VariableEntity.cpp  VariableEntity.h  WhileEntity.cpp  WhileEntity.h
Team17/Code17/src/spa/src/models/Pattern/: AssignPattern.cpp  AssignPattern.h  IfPattern.cpp  IfPattern.h  Pattern.cpp  Pattern.h  ThreeValuePattern.cpp  ThreeValuePattern.h  WhilePattern.cpp  WhilePattern.h
Team17/Code17/src/spa/src/models/Relationship/: CallsRelationship.cpp  CallsRelationship.h  CallsTRelationship.cpp  CallsTRelationship.h  FollowsRelationship.cpp  FollowsRelationship.h  FollowsTRelationship.cpp  FollowsTRelationship.h  ModifyRelationship.cpp  ModifyRelationship.h  NextRelationship.cpp  NextRelationship.h  NextTRelationship.cpp  NextTRelationship.h  ParentRelationship.cpp  ParentRelationship.h  ParentTRelationship.cpp  ParentTRelationship.h  Relationship.cpp  Relationship.h  RelationshipType.h  UsesRelationship.cpp  UsesRelationship.h
(+387 files in other folders)
